# rust-staticlib-gen

./: .gitignore  CHANGES.md  CHANGES.template.md  NOTICE  README.md  dune-cargo-build.opam  dune-project  rust-staticlib-build.opam  rust-staticlib-gen.opam  rust-staticlib-virtual.opam  rust-staticlib.opam
.github/workflows/: ocaml.yml
src/: Cargo_manifest.ml  Cargo_manifest.mli  Cmdline.ml  Cmdline.mli  Crate_dependency.ml  Crate_dependency.mli  Opam_pkg_meta.ml  Opam_pkg_meta.mli  Project_root.ml  Rust_staticlib.ml  Rust_staticlib.mli  Rust_staticlib_gen.ml  Util.ml  Util.mli  dune
virtual-lib/: Rust_staticlib.mli  dune
